--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "cli-timer"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Giorgi Beriashvili <giorgi.beriashvili@outlook.com>"]
 edition = "2018"
 
 [dependencies]
+structopt = "0.2.14"
+chrono = "0.4.6"
