--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,14 @@ name = "cli-timer"
 version = "0.2.0"
 authors = ["Giorgi Beriashvili <giorgi.beriashvili@outlook.com>"]
 edition = "2018"
+description = "Program used to set a timer."
+documentation = "https://github.com/0rganic/cli-timer"
+homepage = "https://github.com/0rganic/cli-timer"
+repository = "https://github.com/0rganic/cli-timer"
+readme = "README.md"
+keywords = ["rust", "cli", "timer", "application", "begginer-friendly"]
+categories = ["command-line-utilities"]
+license = "APACHE-2.0 OR MIT"
 
 [lib]
 name = "logger"
