Update CHANGELOG.md, Cargo.toml and README.md
Fix minor documentation bugs.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.3.1"
 authors = ["Giorgi Beriashvili <giorgi.beriashvili@outlook.com>"]
 edition = "2018"
 description = "Program used to set a timer."
-documentation = "https://github.com/0rganic/cli-timer"
+documentation = "https://docs.rs/cli-timer"
 homepage = "https://github.com/0rganic/cli-timer"
 repository = "https://github.com/0rganic/cli-timer"
 readme = "README.md"
