--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,19 +8,12 @@ documentation = "https://docs.rs/cli-timer"
 homepage = "https://github.com/0rganic/cli-timer"
 repository = "https://github.com/0rganic/cli-timer"
 readme = "README.md"
-keywords = ["rust", "cli", "timer", "application", "begginer-friendly"]
+keywords = ["rust", "cli", "timer", "application", "beginner-friendly"]
 categories = ["command-line-utilities"]
 license = "Apache-2.0 OR MIT"
-
-[lib]
-name = "logger"
-path = "src/lib.rs"
-
-[[bin]]
-name = "main"
-path = "src/main.rs"
 
 [dependencies]
 structopt = "0.2.14"
 chrono = "0.4.6"
 log = "0.4.6"
+pbr = "1.0.1"
