--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,6 +25,11 @@ steps:
       echo "##vso[task.setvariable variable=PATH;]%PATH%;%USERPROFILE%\.cargo\bin"
     displayName: Install Rust on Windows
     condition: eq( variables['Agent.OS'], 'Windows_NT' )
+  - script: |
+      sudo apt-get install libasound2
+      sudo apt-get install alsa-utils
+    displayName: Install libraries for ALSA support on Linux
+    condition: eq( variables['Agent.OS'], 'Linux' )
   - script: cargo build --all
     displayName: Cargo build
   - script: cargo test --all
