--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,9 +26,8 @@ steps:
     displayName: Install Rust on Windows
     condition: eq( variables['Agent.OS'], 'Windows_NT' )
   - script: |
-      sudo apt-get install libasound2
-      sudo apt-get install alsa-utils
-    displayName: Install libraries for ALSA support on Linux
+    sudo apt install pkg-config
+    displayName: Install pkg-config on Linux
     condition: eq( variables['Agent.OS'], 'Linux' )
   - script: cargo build --all
     displayName: Cargo build
