--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ steps:
     displayName: Install Rust on Windows
     condition: eq( variables['Agent.OS'], 'Windows_NT' )
   - script: |
-    sudo apt install pkg-config
+      sudo apt-get install pkg-config
     displayName: Install pkg-config on Linux
     condition: eq( variables['Agent.OS'], 'Linux' )
   - script: cargo build --all
