--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,9 +26,12 @@ steps:
     displayName: Install Rust on Windows
     condition: eq( variables['Agent.OS'], 'Windows_NT' )
   - script: |
-      sudo apt-get install build-essentials
-      sudo apt-get update && time sudo apt-get dist-upgrade
-    displayName: Install pkg-config on Linux
+      sudo apt-get install alsa-base
+      sudo apt-get install alsa-firmware-loaders
+      sudo apt-get install alsa-oss
+      sudo apt-get install alsa-source
+      sudo apt-get install alsa-utils
+    displayName: Check for alsa's dependencies on Linux
     condition: eq( variables['Agent.OS'], 'Linux' )
   - script: cargo build --all
     displayName: Cargo build
