--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,11 +26,7 @@ steps:
     displayName: Install Rust on Windows
     condition: eq( variables['Agent.OS'], 'Windows_NT' )
   - script: |
-      sudo apt-get install alsa-base
-      sudo apt-get install alsa-firmware-loaders
-      sudo apt-get install alsa-oss
-      sudo apt-get install alsa-source
-      sudo apt-get install alsa-utils
+      ssudo apt-get install libsdl2-dev
     displayName: Check for alsa's dependencies on Linux
     condition: eq( variables['Agent.OS'], 'Linux' )
   - script: cargo build --all
