--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ steps:
     displayName: Install Rust on Windows
     condition: eq( variables['Agent.OS'], 'Windows_NT' )
   - script: |
-      sudo apt-get install libsdl2-dev
+      sudo apt-get install libsdl2-dev --fix-missing
     displayName: Check for alsa's dependencies on Linux
     condition: eq( variables['Agent.OS'], 'Linux' )
   - script: cargo build --all
