--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cli-timer"
-version = "0.3.53"
+version = "0.3.60"
 authors = ["Giorgi Beriashvili <giorgi.beriashvili@outlook.com>"]
 edition = "2018"
 description = "Program used to set a timer."
@@ -22,3 +22,4 @@ log = "0.4.6"
 pbr = "1.0.1"
 rodio = "0.8.1"
 structopt = "0.2.15"
+termcolor = "1.0.4"
