--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cli-timer"
-version = "0.3.62"
+version = "0.3.70"
 authors = ["Giorgi Beriashvili <giorgi.beriashvili@outlook.com>"]
 edition = "2018"
 description = "Program used to set a timer."
@@ -18,6 +18,7 @@ license = "Apache-2.0 OR MIT"
 
 [dependencies]
 chrono = "0.4.6"
+dirs = "1.0.5"
 log = "0.4.6"
 pbr = "1.0.1"
 rodio = "0.8.1"
