Fix and update links

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,8 @@ authors = ["Giorgi Beriashvili <giorgi.beriashvili@outlook.com>"]
 edition = "2018"
 description = "Program used to set a timer."
 documentation = "https://docs.rs/cli-timer"
-homepage = "https://github.com/0rganic/cli-timer"
-repository = "https://github.com/0rganic/cli-timer"
+homepage = "https://github.com/GiorgiBeriashvili/cli-timer"
+repository = "https://github.com/GiorgiBeriashvili/cli-timer"
 readme = "README.md"
 keywords = ["rust", "cli", "timer", "application", "beginner-friendly"]
 categories = ["command-line-utilities"]
