--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cli-timer"
-version = "0.3.74"
+version = "0.3.75"
 authors = ["Giorgi Beriashvili <giorgi.beriashvili@outlook.com>"]
 edition = "2018"
 description = "Program used to set a timer."
@@ -13,7 +13,7 @@ categories = ["command-line-utilities"]
 license = "Apache-2.0 OR MIT"
 
 [badges]
-azure-devops = { project = "https://dev.azure.com/giorgiberiashvili/cli-timer", pipelines = "GiorgiBeriashvili.cli-timer", build = "2" }
+azure-devops = { project = "https://dev.azure.com/giorgiberiashvili/cli-timer", pipeline = "GiorgiBeriashvili.cli-timer", build = "2" }
 maintenance = { status = "actively-developed" }
 
 [dependencies]
