--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cli-timer"
-version = "0.3.78"
+version = "0.3.79"
 authors = ["Giorgi Beriashvili <giorgi.beriashvili@outlook.com>"]
 edition = "2018"
 description = "Program used to set a timer."
@@ -18,6 +18,7 @@ maintenance = { status = "actively-developed" }
 
 [dependencies]
 chrono = "0.4.6"
+color-backtrace = "0.1.3"
 dirs = "1.0.5"
 log = "0.4.6"
 pbr = "1.0.1"
