Introduce a new dependency, fix code logic
The spin_sleep dependency will potentially improve the timer's accuracy.

The program will display proper output if executed without arguments.

Update the package's version from 0.3.79 to 0.3.80.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cli-timer"
-version = "0.3.79"
+version = "0.3.80"
 authors = ["Giorgi Beriashvili <giorgi.beriashvili@outlook.com>"]
 edition = "2018"
 description = "Program used to set a timer."
@@ -23,5 +23,6 @@ dirs = "1.0.5"
 log = "0.4.6"
 pbr = "1.0.1"
 rodio = "0.8.1"
+spin_sleep = "0.3.7"
 structopt = "0.2.15"
 termcolor = "1.0.4"
