--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cli-timer"
-version = "0.3.80"
+version = "0.3.81"
 authors = ["Giorgi Beriashvili <giorgi.beriashvili@outlook.com>"]
 edition = "2018"
 description = "Program used to set a timer."
@@ -14,7 +14,7 @@ license = "Apache-2.0 OR MIT"
 
 [badges]
 azure-devops = { project = "giorgiberiashvili/cli-timer", pipeline = "GiorgiBeriashvili.cli-timer", build = "2" }
-maintenance = { status = "actively-developed" }
+maintenance = { status = "passively-maintained" }
 
 [dependencies]
 chrono = "0.4.6"
@@ -22,7 +22,10 @@ color-backtrace = "0.1.3"
 dirs = "1.0.5"
 log = "0.4.6"
 pbr = "1.0.1"
-rodio = "0.8.1"
+rodio = "0.9.0"
+serde = "1.0.90"
+serde_derive = "1.0.90"
 spin_sleep = "0.3.7"
 structopt = "0.2.15"
 termcolor = "1.0.4"
+toml = "0.5.0"
